added version based separation of biulds + removed dead code

--- a/build.default.properties
+++ b/build.default.properties
@@ -21,8 +21,8 @@ vagrant-src.dir = ${vagrant.basedir}/src
 vagrant.provider = virtualbox
 
 # ---- Vagrant box settings -----------------------------------------------------
-vagrant-box.prefix = appserverFedora${target-os.version}
-vagrant-box.remote.location = http://boxes.appserver.io/linux/fedora
+vagrant-box.prefix = appserverFedora${target-os.version}Dist
+vagrant-box.baseurl = http://boxes.appserver.io/linux/fedora/${target-os.version}
 
 # ---- build specific settings - ---------------------------------------------------------
 # Supply only if not given otherwise e.g. within a Jenkins job
@@ -38,7 +38,7 @@ build.name.prefix = appserver-
 build.name.ext = rpm
 build.server.user = build
 build.server.host = bernade.appserver.io
-build.server.upload-path = /var/www/builds.appserver.io/linux/fedora/
+build.server.upload-path = /var/www/builds.appserver.io/linux/fedora/${target-os.version}/
 
 # Specific SCP settings as we have a strange build dir on Fedora ----------------
 package.specific.dir = /root/rpmbuild/RPMS/${os.architecture}/
@@ -53,7 +53,7 @@ appserver.src.repo = appserver-io/appserver
 appserver.runtime.version = 1.1.0
 appserver.runtime.build = 49.alpha2
 appserver.runtime.package = ${build.name.prefix}runtime-${appserver.runtime.version}-${appserver.runtime.build}.${os.version.prefix}${target-os.version}.${os.architecture}
-appserver.runtime.url = http://builds.appserver.io/linux/fedora/${appserver.runtime.package}.tar.gz
+appserver.runtime.url = http://builds.appserver.io/linux/fedora/${target-os.version}/${appserver.runtime.package}.tar.gz
 
 # ---- appserver webapp pre-deployment ------------------------------------------
 appserver.apps.example.version = latest
