--- a/tests/tests.default.properties
+++ b/tests/tests.default.properties
@@ -10,7 +10,13 @@
 # ---- Test specific configuration values  --------------------------------------
 test.basedir = .
 
-# ---- Jmeter specific properties -----------------------------------------------
+# ---- Services specific properties ----------------------------------------------
+service.base.address = 127.0.0.1
+service.http.default.port = 9080
+service.https.default.port = 9443
+service.php-fpm.default.port = 9010
+
+# ---- Jmeter specific properties ------------------------------------------------
 jmeter.vagrant.basedir = /opt
 jmeter.example-test.path = ${appserver-base.dir}/webapps/example/jmeter
 jmeter.package.name = apache-jmeter-2.13
