--- a/tests/tests.default.properties
+++ b/tests/tests.default.properties
@@ -19,6 +19,7 @@ service.php-fpm.default.port = 9010
 # ---- Jmeter specific properties ------------------------------------------------
 jmeter.vagrant.basedir = /opt
 jmeter.example-test.path = ${appserver-base.dir}/webapps/example/jmeter
+jmeter.example.loop-count = 40
 jmeter.package.name = apache-jmeter-2.13
 jmeter.package.extension = .tgz
 jmeter.download.url = http://mirror.23media.de/apache/jmeter/binaries/${jmeter.package.name}${jmeter.package.extension}
