--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!DOCTYPE project>
-<project name="appserver-io-dist/fedora" basedir="." default="build">
+<project name="appserver-io-dist/fedora" basedir="." default="dependencies-init">
 
     <!-- Readin enviroment properties to env property -->
     <property environment="env" />
@@ -23,9 +23,22 @@
     <property name="reports.dir" value="${basedir}/reports" />
 
     <!-- ==================================================================== -->
-    <!-- Import the tests/*.xml files                                         -->
+    <!-- Import the local tests/*files                                        -->
     <!-- ==================================================================== -->
     <import file="tests/test.xml"/>
+
+    <!-- ==================================================================== -->
+    <!-- Import the package build files if they are present                   -->
+    <!-- ==================================================================== -->
+    <import file="${package.dir}/common.xml" optional="true"/>
+
+    <!-- initialize the library specific properties -->
+    <property name="codepool" value="vendor"/>
+
+    <!-- initialize the directory where we can find the real build files -->
+    <property name="dependency.dir" value ="${basedir}/${codepool}" />
+    <property name="package.dir" value="${dependency.dir}/package" />
+    <property name="package.remote-location" value="https://github.com/wick-ed/package.git" />
 
     <!-- ==================================================================== -->
     <!-- Cleans the target directories                                        -->
@@ -33,6 +46,14 @@
     <target name="clean">
         <delete dir="${target.dir}" includeemptydirs="true" quiet="false" verbose="false" failonerror="true"/>
         <delete dir="${temp.dir}" includeemptydirs="true" quiet="false" verbose="false" failonerror="true"/>
+    </target>
+
+    <!-- ==================================================================== -->
+    <!-- Prepares the target dir                                              -->
+    <!-- ==================================================================== -->
+    <target name="prepare" depends="clean">
+        <mkdir dir="${target.dir}" />
+        <mkdir dir="${temp.dir}" />
     </target>
 
     <!-- ==================================================================== -->
@@ -54,14 +75,6 @@
     </target>
 
     <!-- ==================================================================== -->
-    <!-- Prepares the target dir                                              -->
-    <!-- ==================================================================== -->
-    <target name="prepare" depends="clean">
-        <mkdir dir="${target.dir}" />
-        <mkdir dir="${temp.dir}" />
-    </target>
-
-    <!-- ==================================================================== -->
     <!-- Prepares the reports environment                                     -->
     <!-- ==================================================================== -->
     <target name="prepare-reports">
@@ -76,116 +89,39 @@
     </target>
 
     <!-- ==================================================================== -->
-    <!-- Installs composer in target directory                                -->
+    <!-- Checks if the package helper libary is present                       -->
     <!-- ==================================================================== -->
-    <target name="install-composer">
-        <get src="https://getcomposer.org/installer" dest="${temp.dir}/composer-installer" />
-        <exec dir="${temp.dir}" executable="php">
-            <arg value="composer-installer" />
-        </exec>
-        <!-- also add the github oauth token to the local installation -->
-        <exec dir="${temp.dir}" executable="php">
-            <arg line="./composer.phar config -g github-oauth.github.com ${github.oauth.token}"/>
-        </exec>
+    <target name="package-library-present">
+        <!-- check for the existence of the most central file of the package library -->
+        <available file="${package.dir}/common.xml" property="package-library.present" />
     </target>
 
     <!-- ==================================================================== -->
-    <!-- Will test if the targeted box is already up and running.             -->
-    <!-- Will set the properties "vagrant-box.running" or                     -->
-    <!-- "vagrant-box.not-running" depending on the result                    -->
+    <!-- Loads all dependencies needed for the execution of build targets.    -->
+    <!-- Not to be confused with the loading of dependencies needed for the   -->
+    <!-- built packages!                                                      -->
     <!-- ==================================================================== -->
-    <target name="test-vagrant-box-running">
-        <!-- issue the actual command -->
-        <exec dir="${temp.dir}" executable="vagrant" outputproperty="vagrant-box.status">
-            <arg value="status" />
-        </exec>
-        <parse-vagrant-box-status status="${vagrant-box.status}" boxname="${vagrant-box.name}" />
-        <condition property="vagrant-box.not-running">
-            <isset property="BOX_NOT_RUNNING"/>
-        </condition>
-        <condition property="vagrant-box.running">
-            <isset property="BOX_RUNNING"/>
-        </condition>
-    </target>
-
-    <!-- ==================================================================== -->
-    <!-- Will parse a vagrant box status to look for the "running" state.     -->
-    <!-- Will set BOX_RUNNING if found, BOX_NOT_RUNNING if otherwise          -->
-    <!-- ==================================================================== -->
-    <scriptdef name="parse-vagrant-box-status" language="javascript">
-        <attribute name="status"/>
-        <attribute name="boxname"/>
-        <![CDATA[
-            // getting the params
-            var status = attributes.get("status");
-            var boxName = attributes.get("boxname");
-            // check the occurence of a certain run indicator
-            if (status.indexOf(boxName + " running") > -1) {
-                project.setProperty("BOX_RUNNING", true);
-            } else {
-                project.setProperty("BOX_NOT_RUNNING", true);
-            }
-        ]]>
-    </scriptdef>
-
-    <!-- ==================================================================== -->
-    <!-- Will start a vagrant box within the tmp directory                    -->
-    <!-- ==================================================================== -->
-    <target name="start-vagrant-box" depends="test-vagrant-box-running" if="vagrant-box.not-running">
-        <!-- tell the user we need the box name first -->
-        <fail unless="vagrant-box.name" message="Please specify the type of box to start e.g. using 'ant start-vagrant-build-box'" />
-        <!-- issue the actual start command -->
-        <exec dir="${temp.dir}" executable="vagrant" errorproperty="vagrant-box.start.failed">
-            <arg line="up ${vagrant-box.name} --provider=${vagrant.provider} --destroy-on-error" />
-        </exec>
-        <!-- eliminate the possiblity of empty but existing error output -->
-        <property name="vagrant-box.start.failed" value=""/>
-        <condition property="fatal-error.occured" value="${vagrant-box.start.failed}">
-            <not>
-                <equals arg1="${vagrant-box.start.failed}" arg2=""/>
-            </not>
-        </condition>
-        <!-- check for a specific build failure and make an emergency destroy -->
-        <antcall target="destroy-vagrant-box-on-error" />
-        <!-- tell them about any failures we might encountered -->
-        <fail if="fatal-error.occured" message="Starting the vagrant box failed! Error message was: '${fatal-error.occured}', also see log above." />
-    </target>
-
-    <!-- ==================================================================== -->
-    <!-- Will start a vagrant box specifically suited for build tasks         -->
-    <!-- ==================================================================== -->
-    <target name="start-vagrant-build-box">
-        <!-- map the vagrant name according to our prepared environment -->
-        <property name="vagrant-box.name" value="${vagrant-box.prefix}Build" />
-        <!-- prepare the building environment -->
-        <antcall target="prepare-build-environment" />
-        <!-- start our vagrant box -->
-        <antcall target="start-vagrant-box" />
-    </target>
-
-    <!-- ==================================================================== -->
-    <!-- Will destroy any running vagrant box within our tmp directory        -->
-    <!-- ==================================================================== -->
-    <target name="destroy-vagrant-box">
-        <!-- issue the actual destroy command -->
-        <exec dir="${temp.dir}" executable="vagrant" failonerror="true">
-            <arg line="destroy -f" />
+    <target name="dependencies-init" depends="package-library-present" unless="package-library.present">
+        <!-- create the target dir -->
+        <mkdir dir="${dependency.dir}" />
+        <!-- clone the latest version of our package library -->
+        <exec dir="${dependency.dir}" executable="git">
+            <arg line="clone ${package.remote-location}" />
         </exec>
     </target>
 
     <!-- ==================================================================== -->
-    <!-- Will destroy any running vagrant box within our tmp directory if     -->
-    <!-- there has been an error before                                       -->
+    <!-- Interface to the dependency "prepare-src-version-parts" target       -->
     <!-- ==================================================================== -->
-    <target name="destroy-vagrant-box-on-error" if="fatal-error.occured" unless="${vagrant-box.error-resistant}">
-        <!-- forward to the destroy command -->
-        <antcall target="destroy-vagrant-box" />
+    <target name="get-src-version-parts">
+        <!-- prepare the version parts based on the latest tag on the sources -->
+        <antcall target="prepare-src-version-parts" />
     </target>
 
     <!-- ==================================================================== -->
     <!-- Prepares the appserver sources                                       -->
     <!-- ==================================================================== -->
-    <target name="prepare-appserver-dist" depends="prepare, prepare-src-version-parts">
+    <target name="prepare-appserver-dist" depends="prepare, get-src-version-parts">
         <!-- install local composer -->
         <antcall target="install-composer" />
         <!-- tell them what we do here -->
@@ -216,7 +152,7 @@
     <!-- ==================================================================== -->
     <!-- Creates a RPM package with the appserver sources                     -->
     <!-- ==================================================================== -->
-    <target name="create-appserver-dist-rpm" depends="prepare-appserver-dist, prepare-src-version-parts" description="Creates a RPM package with appserver sources">
+    <target name="create-appserver-dist-rpm" depends="prepare-appserver-dist, get-src-version-parts" description="Creates a RPM package with appserver sources">
         <!-- copy packaging build files to target -->
         <copy todir="${target.dir}/src">
             <fileset dir="${src.dir}/dist">
@@ -273,76 +209,10 @@
     </target>
 
     <!-- ==================================================================== -->
-    <!-- Will check if a download of the appserver src is needed              -->
-    <!-- ==================================================================== -->
-    <target name="check-appserver-src-needed">
-        <!-- check if the appserver source is already present -->
-        <available file="${temp.dir}/appserver-src/.git" type="dir" property="appserver.src.unneeded"/>
-    </target>
-
-    <!-- ==================================================================== -->
-    <!-- Will download the appserver src unless it is not needed              -->
-    <!-- ==================================================================== -->
-    <target name="get-appserver-src" depends="check-appserver-src-needed" unless="appserver.src.unneeded">
-        <!-- clone appserver src -->
-        <exec dir="${temp.dir}" executable="git">
-            <arg line="clone https://${github.oauth.token}:x-oauth-basic@github.com/${appserver.src.repo} appserver-src" />
-        </exec>
-    </target>
-
-    <!-- ==================================================================== -->
-    <!-- Will provide the appserver.src.version property if not defined       -->
-    <!-- already                                                              -->
-    <!-- ==================================================================== -->
-    <target name="get-appserver-src-version" depends="get-appserver-src">
-        <!-- get lastest tag version -->
-        <exec dir="${temp.dir}/appserver-src" executable="git" outputProperty="appserver.src.version">
-            <arg line="describe --abbrev=0 --tags" />
-        </exec>
-    </target>
-
-    <!-- ==================================================================== -->
-    <!-- Will split the github tag into a semver version (e.g. 1.0.0) and a   -->
-    <!-- suffix (e.g. beta)                                                   -->
-    <!-- ==================================================================== -->
-    <target name="prepare-src-version-parts" depends="get-appserver-src-version">
-        <!-- filter the version string -->
-        <filter-version param="${appserver.src.version}" />
-        <property name="appserver.src.semver" value="${RESULT_VERSION}" />
-        <property name="appserver.src.suffix" value="${RESULT_BUILD-NUMBER}" />
-    </target>
-
-    <!-- ==================================================================== -->
-    <!-- Will split a string at the "-" character                             -->
-    <!-- ==================================================================== -->
-    <scriptdef name="filter-version" language="javascript">
-        <attribute name="param"/>
-        <![CDATA[
-       // getting the param
-        var param = attributes.get("param");
-
-        // preset the return values
-        var resultVersion = param;
-        var resultBuildNumber = '';
-
-        // split if necessary
-        if (param.indexOf("-") !== -1) {
-
-           resultVersion = param.substring(0, param.indexOf("-"));
-           resultBuildNumber = param.replace(resultVersion + "-", ".");
-        }
-
-        // store the result in new properties
-        project.setProperty("RESULT_VERSION", resultVersion);
-        project.setProperty("RESULT_BUILD-NUMBER", resultBuildNumber);
-    ]]>
-    </scriptdef>
-
-    <!-- ==================================================================== -->
     <!-- Moves the freshly built files from the RPM build directory to the    -->
     <!-- jenkins one                                                          -->
     <!-- ==================================================================== -->
-    <target name="move-build-files" depends="prepare-src-version-parts">
+    <target name="move-build-files" depends="get-src-version-parts">
         <!-- move the files -->
         <move file="${package.specific.dir}/${appserver.runtime.package}.rpm" todir="${build.dir}" failonerror="true"/>
         <move file="${package.specific.dir}/${build.name.prefix}dist-${appserver.src.semver}-${build.number}${appserver.src.suffix}.${os.version.prefix}${target-os.version}.${os.architecture}.rpm" todir="${build.dir}" failonerror="true"/>
@@ -356,16 +226,6 @@
         <echo message="Now starting release cycle"/>
         <!-- publish first -->
         <antcall target="publish" />
-    </target>
-
-    <!-- ==================================================================== -->
-    <!-- Publishes the recent build to any snapshot hubs, etc.. Not to be     -->
-    <!-- mistaken for the "release" target                                    -->
-    <!-- ==================================================================== -->
-    <target name="publish" description="Publishes the recent build to any snapshot hubs, etc..">
-        <echo message="Now starting publish cycle"/>
-        <!-- upload the build artifacts to the snapshot hub -->
-        <antcall target="copy-to-hub" />
     </target>
 
     <!-- ==================================================================== -->
@@ -405,19 +265,6 @@
     </target>
 
     <!-- ==================================================================== -->
-    <!-- Creates all RPM packages within a temporarily started vagrant box.   -->
-    <!-- Box will be started and destroyed automatically                      -->
-    <!-- ==================================================================== -->
-    <target name="build">
-        <!-- start our vagrant box -->
-        <antcall target="start-vagrant-build-box" />
-        <!-- start the build in the box -->
-        <antcall target="vagrant-build" />
-        <!-- destroy the box after all work is done -->
-        <antcall target="destroy-vagrant-box" />   
-    </target>
-
-    <!-- ==================================================================== -->
     <!-- Creates all RPM packages within an existing vagrant box              -->
     <!-- ==================================================================== -->
     <target name="vagrant-build">
@@ -447,40 +294,6 @@
     <target name="local-build" depends="prepare-build, create-appserver-dist-rpm, create-appserver-runtime-rpm">
         <!-- move the files we just prepared to the build dir -->
         <antcall target="move-build-files" />
-    </target>
-
-    <!-- ==================================================================== -->
-    <!-- Runs all available tests from all included test files                -->
-    <!-- ==================================================================== -->
-    <target name="local-run-tests" depends="prepare">
-        <!-- run the integration tests -->
-        <antcall target="local-run-system-tests" />
-        <!-- run performance tests -->
-        <antcall target="local-run-performance-tests" />
-    </target>
-
-    <!-- ==================================================================== -->
-    <!-- Runs all available tests from all included test files within a       -->
-    <!-- vagrant machine                                                      -->
-    <!-- ==================================================================== -->
-    <target name="vagrant-run-tests">
-        <!-- run the system tests within the assumed box -->
-        <antcall target="vagrant-run-system-tests" />
-        <!-- run the performance tests within the assumed box -->
-        <antcall target="vagrant-run-performance-tests" />
-    </target>
-
-    <!-- ==================================================================== -->
-    <!-- Runs all available tests from all included test files within a       -->
-    <!-- vagrant machine                                                      -->
-    <!-- ==================================================================== -->
-    <target name="run-tests">
-        <!-- start our vagrant box -->
-        <antcall target="start-vagrant-test-box" />
-        <!-- do the actual testing -->
-        <antcall target="vagrant-run-tests" />
-        <!-- destroy the box after all work is done -->
-        <antcall target="destroy-vagrant-box" />
     </target>
 
 </project>
