--- a/build.xml
+++ b/build.xml
@@ -151,44 +151,11 @@
     </target>
 
     <!-- ==================================================================== -->
-    <!-- Prepares the appserver sources                                       -->
-    <!-- ==================================================================== -->
-    <target name="prepare-appserver-dist" depends="prepare, prepare-src-version-parts">
-        <!-- install local composer -->
-        <antcall target="install-composer" />
-        <!-- tell them what we do here -->
-        <echo message="Checkout latest tag version ${appserver.src.version}" />
-        <!-- checkout latest tag version -->
-        <exec dir="${temp.dir}/appserver-src" executable="git">
-            <arg line="checkout -q ${appserver.src.version}" />
-        </exec>
-        <!-- move to target.dir -->
-        <move todir="${target.dir}/src${appserver-base.dir}">
-            <fileset dir="${temp.dir}/appserver-src"/>
-        </move>
-        <!-- remove git db files -->
-        <delete dir="${target.dir}/src${appserver-base.dir}/.git" includeemptydirs="true" />
-        <!-- create the file with the version number -->
-        <echo file="${target.dir}/src${appserver-base.dir}/etc/appserver/.release-version" message="${appserver.src.semver}-${build.number}${appserver.src.suffix}" />
-        <!-- also add the github oauth token to the local installation -->
-        <exec dir="${temp.dir}" executable="php">
-        + <arg line="./composer.phar config -g github-oauth.github.com ${github.oauth.token}"/>
-        + </exec>
-        <!-- install dependencies via composer and let postinstall-scripts proceed -->
-        <echo message="Installing composer dependencies" />
-        <exec dir="${target.dir}/src${appserver-base.dir}" executable="php">
-            <arg line="${temp.dir}/composer.phar install --prefer-dist --no-dev --no-interaction --ignore-platform-reqs --optimize-autoloader"/>
-        </exec>
-        <!-- create deploy folder if not exists -->
-        <mkdir dir="${target.dir}/src/opt/appserver/deploy"/>
-        <!-- deploy example app by putting it into deploy folder of runtime -->
-        <get src="${appserver.apps.example.url}" dest="${target.dir}/src${appserver-base.dir}/deploy/example.phar" />
-    </target>
-
-    <!-- ==================================================================== -->
     <!-- Creates a RPM package with the appserver sources                     -->
     <!-- ==================================================================== -->
-    <target name="create-appserver-dist-rpm" depends="prepare-appserver-dist, prepare-src-version-parts" description="Creates a RPM package with appserver sources">
+    <target name="create-appserver-dist-rpm" depends="prepare-src-version-parts" description="Creates a RPM package with appserver sources">
+        <!-- prepare the dist creation -->
+        <antcall target="prepare-appserver-dist" />
         <!-- copy packaging build files to target -->
         <copy todir="${target.dir}/src">
             <fileset dir="${src.dir}/dist">
@@ -272,43 +239,6 @@
         <echo message="Now starting publish cycle"/>
         <!-- upload the build artifacts to the snapshot hub -->
         <antcall target="copy-to-hub" />
-    </target>
-
-    <!-- ==================================================================== -->
-    <!-- Copies any built package to the snapshot hosting server.             -->
-    <!-- ==================================================================== -->
-    <target name="copy-to-hub" description="Uploads any built package to the file-server.">
-        <echo message="Now try to upload all builds to file-server"/>
-        <exec executable="sh" failonerror="true">
-            <arg value="-c" />
-            <arg value="scp -o StrictHostKeyChecking=no -i ${user.home}/.ssh/id_rsa ${build.dir}/* ${build.server.user}@${build.server.host}:${build.server.upload-path}" />
-        </exec>
-    </target>
-
-    <!-- ==================================================================== -->
-    <!-- Will prepare the environment to run a vagrant box in                 -->
-    <!-- ==================================================================== -->
-    <target name="prepare-build-environment" depends="prepare, clean-build, clean-reports">
-        <copy todir="${temp.dir}" failonerror="true">
-            <fileset dir="${basedir}">
-               <include name="build.*"/>
-               <include name="tests/*"/>
-               <include name="${codepool}/**"/>
-               <exclude name="tests/provision.sh"/>
-            </fileset>
-        </copy>
-        <!-- expand the properties within our box configuration -->
-        <copy todir="${temp.dir}" failonerror="true">
-            <fileset dir=".">
-                <include name="Vagrantfile"/>
-                <include name="provision.sh"/>
-            </fileset>
-            <filterchain>
-                <expandproperties/>
-            </filterchain>
-        </copy>
-        <!-- prepare a tmp dir for work within the VM -->
-        <mkdir dir="${temp.dir}/tmp" />
     </target>
 
     <!-- ==================================================================== -->
