--- a/build.default.properties
+++ b/build.default.properties
@@ -46,7 +46,7 @@ package.specific.dir = /root/rpmbuild/RPMS/${os.architecture}/
 # ---- appserver source ---------------------------------------------------------
 # appserver.src.version will be obtained by cloning the github repository and reading out the latest tag
 # you can set a version by your own to build a specific dist version
-# appserver.src.version = <YOUR_VERSION_HERE>
+# appserver.src.version = <YOUR_VERSION_HERE> e.g. 1.1.0
 appserver.src.repo = appserver-io/appserver
 
 # ---- appserver runtime --------------------------------------------------------
