added os.qualified.path property

--- a/build.default.properties
+++ b/build.default.properties
@@ -31,6 +31,7 @@ vagrant-box.baseurl = http://boxes.appserver.io/linux/fedora/${target-os.version
 
 # ---- build settings - ---------------------------------------------------------
 appserver-base.dir = /opt/appserver
+os.qualified.path = linux/fedora/${target-os.version}
 os.architecture = x86_64
 os.version.prefix = fc
 build.number = ${env.BUILD_NUMBER}
