--- a/build.default.properties
+++ b/build.default.properties
@@ -59,3 +59,7 @@ appserver.runtime.url = http://builds.appserver.io/linux/fedora/${target-os.vers
 # ---- appserver webapp pre-deployment ------------------------------------------
 appserver.apps.example.version = latest
 appserver.apps.example.url = http://apps.appserver.io/example/example-${appserver.apps.example.version}.phar
+
+# ---- appserver webapp pre-deployment ------------------------------------------
+appserver.apps.api.version = latest
+appserver.apps.api.url = http://apps.appserver.io/api/api-${appserver.apps.api.version}.phar
